--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-streamlit
-openai
+streamlit==1.41.1
+openai==1.58.1
+google-api-python-client==2.156.0
+google-auth==2.37.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+gspread==6.1.4
